--- a/data/simple.txt.html
+++ b/data/simple.txt.html
@@ -1,12 +1,12 @@
-<style TYPE='text/css'> <!-- body { line-height: 1.1; } body { font-family: 'courier new'; line-height: 90%; } --> </style>
+<style TYPE='text/css'> <!-- p { line-height: 100%; } body { font-family: 'courier new'; line-height: 100%; } --> </style>
 </font>
 <font color='black'></font>
 <font color='blue'>search </font>
 <font color='black'></font>
 <font color='blue'>source </font>
-<font color='black'> = mytabl1 mycolumn = value</br>
+<font color='black'> = mytabl1 mycolumn = value</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></br>
+<font color='black'></p>
 </font>
 <font color='black'>| </font>
 <font color='blue'>stats </font>
@@ -14,23 +14,27 @@
 <font color='blue'>avg </font>
 <font color='black'>( mycolumn ) </font>
 <font color='blue'>by </font>
-<font color='black'>mycolumn</br>
+<font color='black'>mycolumn</p>
 </font>
-<font color='black'></br>
+<font color='black'></p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'>| </font>
 <font color='blue'>search </font>
-<font color='black'>TST123 = value</br>
+<font color='black'>TST123 = value</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></br>
+<font color='black'></p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'>| </font>
 <font color='blue'>fields </font>
-<font color='black'>mycolumn, </font>
+<font color='black'>mycolumn</p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>         </font>
+<font color='grey'>, </font>
+<font color='black'> </font>
 <font color='blue'>avg </font>
-<font color='black'>( mycolumn )</br>
+<font color='black'>( mycolumn )</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></br>
+<font color='black'></p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'>| </font>
 <font color='blue'>eval </font>
@@ -40,18 +44,18 @@
 <font color='orange'>"xyz"</font>
 <font color='black'>.'ghf'.</font>
 <font color='orange'>"'hij'"</font>
-<font color='black'>.'hhh'</br>
+<font color='black'>.'hhh'</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></br>
+<font color='black'></p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 <font color='black'>| </font>
 <font color='blue'>search </font>
 <font color='black'></font>
 <font color='blue'>source </font>
-<font color='black'> = mytabl1 mycolumn = value</br>
+<font color='black'> = mytabl1 mycolumn = value</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></br>
+<font color='black'></p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 <font color='black'>| </font>
 <font color='blue'>table </font>
-<font color='black'>ABC</br>
+<font color='black'>ABC</p>
