--- a/data/toString.txt.html
+++ b/data/toString.txt.html
@@ -1,27 +1,31 @@
-<style TYPE='text/css'> <!-- body { line-height: 1.1; } body { font-family: 'courier new'; line-height: 90%; } --> </style>
+<style TYPE='text/css'> <!-- p { line-height: 100%; } body { font-family: 'courier new'; line-height: 100%; } --> </style>
 </font>
 <font color='black'></font>
 <font color='blue'>index </font>
-<font color='black'> = _internal</br>
+<font color='black'> = _internal</p>
 </font>
-<font color='black'></br>
+<font color='black'></p>
 </font>
 <font color='black'>| </font>
 <font color='blue'>head </font>
-<font color='black'>1</br>
+<font color='black'>1</p>
 </font>
-<font color='black'></br>
+<font color='black'></p>
 </font>
 <font color='black'>| </font>
 <font color='blue'>eval </font>
 <font color='black'>numberString = </font>
 <font color='blue'>tostring </font>
-<font color='black'>( 123456.789, </font>
+<font color='black'>( 123456.789</p>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>     </font>
+<font color='grey'>, </font>
+<font color='black'> </font>
 <font color='orange'>"commas"</font>
-<font color='black'> )</br>
+<font color='black'> )</p>
 </font>
-<font color='black'></br>
+<font color='black'></p>
 </font>
 <font color='black'>| </font>
 <font color='blue'>table </font>
-<font color='black'>numberString</br>
+<font color='black'>numberString</p>
