Add new unit test for class line_status and delete not needed stuff

--- a/data/long.txt.html
+++ b/data/long.txt.html
@@ -151,7 +151,7 @@
 <font color='black'></p>
 </font>
 <font color='black'>| </font>
-<font color='#04B404'>`to_string_commas_locale($args.ACTIVE_LOCALE$, BULK_CONTROL_SUM)`</font>
+<font color='orange'>`to_string_commas_locale($args.ACTIVE_LOCALE$, BULK_CONTROL_SUM)`</font>
 <font color='black'></p>
 </font>
 <font color='black'></p>
@@ -163,7 +163,7 @@
 <font color='black'></p>
 </font>
 <font color='black'>| </font>
-<font color='#04B404'>`to_string_commas_locale($args.ACTIVE_LOCALE$, BULK_CONTROL_SUM_XPE)`</font>
+<font color='orange'>`to_string_commas_locale($args.ACTIVE_LOCALE$, BULK_CONTROL_SUM_XPE)`</font>
 <font color='black'></p>
 </font>
 <font color='black'></p>
@@ -175,7 +175,7 @@
 <font color='black'></p>
 </font>
 <font color='black'>| </font>
-<font color='#04B404'>`to_string_commas_locale($args.ACTIVE_LOCALE$, BULK_TRX_NUMBER)`</font>
+<font color='orange'>`to_string_commas_locale($args.ACTIVE_LOCALE$, BULK_TRX_NUMBER)`</font>
 <font color='black'></p>
 </font>
 <font color='black'></p>
@@ -187,7 +187,7 @@
 <font color='black'></p>
 </font>
 <font color='black'>| </font>
-<font color='#04B404'>`to_string_commas_locale($args.ACTIVE_LOCALE$, BULK_TRX_NUMBER_XPE)`</font>
+<font color='orange'>`to_string_commas_locale($args.ACTIVE_LOCALE$, BULK_TRX_NUMBER_XPE)`</font>
 <font color='black'></p>
 </font>
 <font color='black'></p>
@@ -199,7 +199,7 @@
 <font color='black'></p>
 </font>
 <font color='black'>| </font>
-<font color='#04B404'>`to_string_commas_locale($args.ACTIVE_LOCALE$, FILE_TRX_NUMBER)`</font>
+<font color='orange'>`to_string_commas_locale($args.ACTIVE_LOCALE$, FILE_TRX_NUMBER)`</font>
 <font color='black'></p>
 </font>
 <font color='black'></p>
