Implment format for subsearch

--- a/data/simple.txt.html
+++ b/data/simple.txt.html
@@ -6,37 +6,35 @@
 <font color='blue'>source </font>
 <font color='black'> = mytabl1 mycolumn = value</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></p>
-</font>
-<font color='black'>| </font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>stats </font>
 <font color='black'></font>
 <font color='blue'>avg </font>
 <font color='black'>( mycolumn ) </font>
 <font color='blue'>by </font>
 <font color='black'>mycolumn</p>
-</font>
-<font color='black'></p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'>| </font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>search </font>
 <font color='black'>TST123 = value</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color='black'>| </font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>fields </font>
 <font color='black'>mycolumn</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'>         </font>
-<font color='grey'>, </font>
-<font color='black'> </font>
-<font color='blue'>avg </font>
-<font color='black'>( mycolumn )</p>
+<font color='black'></font>
+<font color='red'>, </font>
+<font color='black'> avg(mycolumn)</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color='black'>| </font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>eval </font>
 <font color='black'>test = </font>
 <font color='orange'>"abc"</font>
@@ -46,16 +44,16 @@
 <font color='orange'>"'hij'"</font>
 <font color='black'>.'hhh'</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'>| </font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>search </font>
 <font color='black'></font>
 <font color='blue'>source </font>
-<font color='black'> = mytabl1 mycolumn = value</p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'>| </font>
+<font color='black'>= mytabl1 mycolumn = value</p>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>table </font>
 <font color='black'>ABC</p>
