--- a/data/toString.txt.html
+++ b/data/toString.txt.html
@@ -2,30 +2,30 @@
 </font>
 <font color='black'></font>
 <font color='blue'>index </font>
-<font color='black'> = _internal</p>
-</font>
-<font color='black'></p>
-</font>
-<font color='black'>| </font>
+<font color='black'>= _internal</p>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>head </font>
 <font color='black'>1</p>
-</font>
-<font color='black'></p>
-</font>
-<font color='black'>| </font>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>eval </font>
 <font color='black'>numberString = </font>
 <font color='blue'>tostring </font>
 <font color='black'>( 123456.789</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color='black'>     </font>
-<font color='grey'>, </font>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='red'>, </font>
 <font color='black'> </font>
 <font color='orange'>"commas"</font>
 <font color='black'> )</p>
-</font>
-<font color='black'></p>
-</font>
-<font color='black'>| </font>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='red'>| </font>
+<font color='black'></font>
 <font color='blue'>table </font>
 <font color='black'>numberString</p>
